Added gradle.properties to Dockerfile & some refactoring